--- a/src_htmlPhone/static/config/config.json
+++ b/src_htmlPhone/static/config/config.json
@@ -280,7 +280,6 @@
       "routeName": "notes",
       "color": "#feca57",
       "icons": "/html/static/img/icons_app/notes.png"
-
     },
     {
       "name": "9GAG",
@@ -288,6 +287,13 @@
       "icons": "/html/static/img/icons_app/9gag.png",
       "routeName": "9gag",
       "color": "#000"
+    },
+    {
+      "name": "Billing",
+      "menuTitle": "visible",
+      "icons": "/html/static/img/icons_app/9gag.png",
+      "routeName": "bills.bills",
+      "color": "#0e2"
     }
   ],
   "defaultLanguage": "en_US",
@@ -401,7 +407,8 @@
       "APP_BANK_BUTTON_CANCEL": "Annuler",
       "APP_DARKTCHAT_NEW_NOTE": "Ajouter une note",
       "APP_DARKTCHAT_DELETE_NOTE": "Supprimer une note",
-
+      "APP_BILLS_BILLS_TITLE": "Bills",
+      "APP_BILLS_PAY": "Pay bill",
 
       "TIMEAGO": [
         "à l'instant",
@@ -525,6 +532,8 @@
       "APP_BANK_BUTTON_CANCEL": "Cancel",
       "APP_DARKTCHAT_NEW_NOTE": "New Note",
       "APP_DARKTCHAT_DELETE_NOTE": "Delete Note",
+      "APP_BILLS_BILLS_TITLE": "Bills",
+      "APP_BILLS_PAY": "Pay bill",
 
       "TIMEAGO": [
         "Just Now",
